@@ -1,2 +1,9 @@
 # SnakeRemakeFX
-A JavaFX Version of Snake
+A JavaFX Version of the classic game Snake, Made By Joseph Kajuch
+
+Use the arrow keys to play the game and the space bar to restart the game. All sounds used are royalty free.
+
+# JVM Arguments
+Be sure to put these in the JVM before running:
+
+--module-path "YOUR JAVAFX 11.0.2 PATH HERE" --add-modules javafx.controls,javafx.fxml,javafx.media
